--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"
     <title>Spencer Appiah-Howard | wdd130</title>
 </head>
 <body>
@@ -18,6 +19,11 @@
     <h1>Spencer Appiah-Howard | wdd130</h1>
     <img src="image/spenceimage.jpg" alt="Hello, my name is Spencer Appiah-Howard" width="200">
     <p>Hi there! Welcome to my page. My name is Spencer Appiah-Howard and I'm from ghana. I am really excited for this programming journey and can't wait to see the joys of it.</p>
+    <aside>
+        <h2>Ghana</h2>
+        <img src="image/ghana.jpg" alt="Jamestown Accra">
+        <p>Ghana is a country found in the Western parts of Africa. It is rich in natural resources sucha as Gold, Timber, Bauxite and Cocoa. The people of Ghana are very hospitable and open to foreigners. Jamestown is one of oldest light houses in the country and serves as a tourist site in the month of August where a beautiful street carnival of arts, music and food is hosted.</p>
+    </aside>
 </main>
 <footer>
     <p> ©️ 2024 Spencer Appiah-Howard Accra, Ghana.</p>
