--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -15,17 +15,48 @@
     <main>
         <h2>Overview</h2>
 
-        <h3>Purpose</h3>
+        <h3>An online presence serves as a powerful marketing tool, enabling us to reach a wider demographic beyond our local community. Through a well-designed website, we can provide comprehensive information about our rafting packages, safety measures, and the stunning locations where our adventures take place. High-quality visuals, captivating videos, and customer testimonials will help create an immersive online experience, giving potential customers a taste of the excitement they can expect.</h3>
         <p></p>
-        <h3>Audience</h3>
+        <h3>At our water rafting website, we are dedicated to creating a spectacular experience for adventure enthusiasts who crave excitement, nature lovers seeking thrilling outdoor activities, and families or groups looking for unforgettable bonding experiences. 
+            Are you one who seeks exciting and mind 'rafting' adventures in the outdoor? If you have passion for adventure, our services are woven in a unique way to cater for you.
+            Do you want to have a group rafting trip with your family and friends? Whether your trip is for your family or friends, this site brings to your attention that, there will be something for everyone and anyone to do. Days may pass us by, but memories stay forever.
+            What is your favorite part of nature? The waters passing through this wonderfull mountains help you find joy in the best fronts of nature
+
+        </h3>
         <p></p>
 
         <h2>Branding</h2>
 
         <h3>Website Logo</h3>
-        <img src="images/logo.png" alt="Rafting Site Logo">
-
+        <img src="images/whitewaterrafting.jpg" alt="Rafting Site Logo">
+S
         <h2>Style guide</h2>
+
+        <h3>Color Pallete</h3>
+        <p></p>
+        <h3>Typography</h3>
+        <h4>Headings Exanple Font</h4>
+        <h4>Normal Text /Paragraph Example Font</h4>
+        <p>Example text - Lorem ipsum.</p>
+        <h4>Colored Callout Example Font</h4>
+        <p>Exampe text - Lorem ipsum.</p>
+        <h3>Navigation</h3>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Trips</a>
+            <a href="#">Contact Us</a>
+        </nav>
+
+        <h2>Wireframes</h2>
+        <h3>Home Page Wireframe</h3>
+        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Required Home Page Wireframe Design" width="700">
+        <h3>About Us Page Wireframe</h3>
+        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png"
+         alt="About Us Page Wireframe Design" width="700">
     </main>
+    <footer>
+        <p>©️ 2024 |Rafting Site Document | Spencer Appiah-Howard | wdd130</p>
+    </footer>
 </body>
 </html>
