--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -17,10 +17,10 @@
 
         <h3>An online presence serves as a powerful marketing tool, enabling us to reach a wider demographic beyond our local community. Through a well-designed website, we can provide comprehensive information about our rafting packages, safety measures, and the stunning locations where our adventures take place. High-quality visuals, captivating videos, and customer testimonials will help create an immersive online experience, giving potential customers a taste of the excitement they can expect.</h3>
         <p></p>
-        <h3>At our water rafting website, we are dedicated to creating a spectacular experience for adventure enthusiasts who crave excitement, nature lovers seeking thrilling outdoor activities, and families or groups looking for unforgettable bonding experiences. 
+        <h3>At our water rafting website, we are very dedicated to creating a spectacular experience for adventure enthusiasts who crave excitement, nature lovers seeking thrilling outdoor activities, and families or groups looking for unforgettable bonding experiences. 
             Are you one who seeks exciting and mind 'rafting' adventures in the outdoor? If you have passion for adventure, our services are woven in a unique way to cater for you.
             Do you want to have a group rafting trip with your family and friends? Whether your trip is for your family or friends, this site brings to your attention that, there will be something for everyone and anyone to do. Days may pass us by, but memories stay forever.
-            What is your favorite part of nature? The waters passing through this wonderfull mountains help you find joy in the best fronts of nature
+            What is your favorite part of nature? The waters passing through this wonderfull mountains help you find joy in the best fronts of nature.
 
         </h3>
         <p></p>
