--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="styles.css">
     <title>Spencer Appiah-Howard | wdd130</title>
 </head>
 <body>
 <header>
+
     <nav>
         <a href="#">Home</a>
         <a href="wwr/">Rafting Site</a>
