--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html><html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -52,7 +72,7 @@
         <h3>Home Page Wireframe</h3>
         <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Required Home Page Wireframe Design" width="700">
         <h3>About Us Page Wireframe</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png"
+        <img src="https://spencerhoward1010.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png"
          alt="About Us Page Wireframe Design" width="700">
     </main>
     <footer>
