--- a/index.html
+++ b/index.html
@@ -29,4 +29,9 @@
     <p> ©️ 2024 Spencer Appiah-Howard Accra, Ghana.</p>
 </footer>
 </body>
+<ul>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra Ghana Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank"> Salt Lake Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/rome-italy-temple" target="_blank">Rome Italy Temple </a></li>
+</ul>
 </html>
