--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,32 +1,41 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
 <main>
   <div class="hero">
-    <img src="images/..." alt="...">
-    <h1>Rafting Company Name</h1>
+    <img src="images/raft4.jpg" alt="...">
+    <h1>Whitewater Rafting</h1>
     <article>
-      <img src="images/..." alt="...">
-      <p>Lorem ipsum dolor sit amet consectetur ...</p>
+      <img src="images/happy.jpg" alt="...">
+      <p>Tout est beau ici!</p>
     </article>
   </div>
   <section>
     <h2>History</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing ...</p>
+    <p>The Whitewater Rafting company started as normal family tradition which transitioned into a group thing now a global establishment. </p>
   </section>
   <section>
     <h2>Adventure Awaits You!</h2>
-    <img src="images/..." alt="...">
-    <img src="images/..." alt="...">
-    <img src="images/..." alt="...">
-    <img src="images/..." alt="...">
+    <img src="images/raft1.jpg" alt="The thrill">
+    <img src="images/raft2.jpg" alt="Jake rafting">
+    <img src="images/raft3.jpg" alt="Calm waters">
+    <img src="images/raft5.jpg" alt="Group rafting">
     <img src="images/..." alt="...">
   </section>
 </main>
+<footer>
+  <p>©️ 2024, Whitewater Rafting Spencer Appiah-Howard</p>
+<nav class="sociallinks">
+  <a href="https://facebook.com">
+    <img src="images/newfacebook.jpg" alt="Facebook">
+  </a>
+  <a href="https://twitter.com">
+    <img src="images/newtwitterlogo.jpg" alt="Twitter">
+  </a>
+  <a href="https://instagram.com">
+    <img src="images/Instagramlogo.jpg" alt="Instagram">
+  </a>
+</nav>
+</footer>
     
 </body>
 </html>
